--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Word Cache</string>
     <string name="header_str">Containers</string>
+    <color name="dark_magenta">#425B58</color>
+    <color name="light_cyan">#A1C0BB</color>
+    <string name="nav_drw_open">Open navigation drawer</string>
+    <string name="nav_drw_close">Closer navigation drawer</string>
+    <string name="header_brd_desc">Border at the bottom of the menu header.</string>
 </resources>
