Removed Cardviews for the add buttons. Added dashed border and corresponding drawable file. Added quick search text view. Need to edit app options row.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,23 @@
 <resources>
     <string name="app_name">Word Cache</string>
     <string name="header_str">Containers</string>
+
+    <!-- Colors -->
     <color name="dark_magenta">#425B58</color>
     <color name="light_cyan">#A1C0BB</color>
+    <color name="clear_cyan">#E9FFF9</color>
+
+    <!-- Stuff -->
     <string name="nav_drw_open">Open navigation drawer</string>
     <string name="nav_drw_close">Closer navigation drawer</string>
     <string name="header_brd_desc">Border at the bottom of the menu header.</string>
+    <string name="new_word">New word</string>
+    <string name="new_container">New container</string>
+    <string name="quickSearch">Quick search...</string>
+
+    <!-- Menu items -->
+    <string name="home_str">Home</string>
+    <string name="games_str">Games</string>
+    <string name="history_str">History</string>
+    <string name="about_str">About</string>
 </resources>
